--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Harry Potter Fanpage</title>
   <link href="http://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
   <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
+  <link href="http://fonts.cdnfonts.com/css/overdose" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -14,42 +15,46 @@
 </header>
 
 <body>
+<h2 id="subTitle">¿Que deseas saber?</h2>
+
   <div id="container-gallery">
-    <!-- <div class="imageContainers"> -->
+  <div class="imageContainers">
+  <a href="characters.html">
     <button class="buttonImages">
       <img src="./img/Harry Potter personajes.jpg" alt="characters">
       <strong><p class="imagesP">Personajes</p></strong>
     </button>
-    <!-- </div> -->
-    <!-- <div class="imageContainers"> -->
-    <div class="gallerybtn">
+  </a>
+    </div>
+    <div class="imageContainers">
+
       <button class="buttonImages">
         <img src="./img/harry-potter-reliquias-muerte-parte-2_0.webp" alt="Spells">
         <strong><p class="imagesP">Hechizos</p></strong>
       </button>
-      <!-- </div> -->
-      <!-- <div class="imageContainers"> -->
+      </div>
+      <div class="imageContainers">
       <button class="buttonImages">
         <img src="./img/pociones.jpg" alt="Potions">
         <strong><p class="imagesP">Pociones</p></strong>
       </button>
-      <!-- </div> -->
+      </div>
 
-      <!-- <div class="imageContainers"> -->
+      <div class="imageContainers">
       <button class="buttonImages">
-        <img src="./img/Wizarding-World-of-Harry-Potter-768x432.jpg" alt=" alt= " Curiositys">
+        <img src="./img/Wizarding-World-of-Harry-Potter-768x432.jpg" alt= " Curiositys">
         <strong><p class="imagesP">Curiosidades</p></strong>
       </button>
-      <!-- </div> -->
-    </div>
+      </div>
+
   </div>
 
   <div id="music">
-    <!-- <audio> -->
+
     <audio autoplay="" loop="" preload="" controls="">
       <source src="Harry Potter Theme Song.mp3" type="audio/mp3">
     </audio>
-    <!-- </audio>     -->
+
 
   </div>
 
