Pusimos musica de fondo y segunda pagina

--- a/src/characters.html
+++ b/src/characters.html
@@ -4,10 +4,36 @@
 <meta charset="utf-8">
 <title>Personajes</title>
 <link rel="stylesheet" href="style.css" />
+<link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
     </head>
     <header id="charactersTitle">
         <h1>Elija una casa</h1>
+<body>
+<div class="fourHouses">
+    <button class="buttonImages">
+        <img src="./img/gryffindor.png" alt= "Gryffindor">        
+      </button>
 
+      <button class="buttonImages">
+        <img src=".\img\slythering.png" alt= "Slythering">        
+      </button>
+
+      <button class="buttonImages">
+        <img src=".\img\hafelpuf.png" alt= "Hafelpuf">        
+      </button>
+      
+      <button class="buttonImages">
+        <img src=".\img\revenclaw.png" alt= "Ravenclaw">        
+      </button>
+    
+    </div>
+
+
+
+
+
+    <script src="main.js" type="module"></script>
+</body>
 
     </header>
 
