Solucionamos lo de las imagenes y agregamos otras paginas html

--- a/src/index.html
+++ b/src/index.html
@@ -11,45 +11,65 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <header id="title">
-  <h1><strong>Bienvenidos al misterioso mundo de Harry Potter</strong></h1>
+  <h1><strong>Bienvenidos al mágico mundo de Harry Potter</strong></h1>
 </header>
 
 <body>
-<h2 id="subTitle">¿Que deseas saber?</h2>
+  <h2 id="subTitle">
+    ¿Que deseas saber?</h2>
 
   <div id="container-gallery">
-  <div class="imageContainers">
-  <a href="characters.html">
-    <button class="buttonImages">
-      <img src="./img/Harry Potter personajes.jpg" alt="characters">
-      <strong><p class="imagesP">Personajes</p></strong>
-    </button>
-  </a>
+    <div>
+      <div id="imageContainers">
+        <a href="characters.html">
+          <button class="buttonImages">
+            <img src="./img/Harry Potter personajes.jpg" alt="characters">
+            <strong>
+              <p class="imagesP">Personajes</p>
+            </strong>
+          </button>
+        </a>
+      </div>
     </div>
-    <div class="imageContainers">
 
-      <button class="buttonImages">
-        <img src="./img/harry-potter-reliquias-muerte-parte-2_0.webp" alt="Spells">
-        <strong><p class="imagesP">Hechizos</p></strong>
-      </button>
+    <div class="secondImages">
+      <div class="imageContainers">
+        <a href="Spells.html">
+          <button class="buttonImages">
+            <img src="./img/harry-potter-reliquias-muerte-parte-2_0.webp" alt="Spells">
+            <strong>
+              <p class="imagesP">Hechizos</p>
+            </strong>
+          </button>
+        </a>
+
       </div>
       <div class="imageContainers">
-      <button class="buttonImages">
-        <img src="./img/pociones.jpg" alt="Potions">
-        <strong><p class="imagesP">Pociones</p></strong>
-      </button>
+        <a href="Potions.html">
+        <button class="buttonImages">          
+            <img src="./img/pociones.jpg" alt="Potions">
+            <strong>
+              <p class="imagesP">Pociones</p>
+            </strong>
+        </button>
+           </a>
       </div>
-
       <div class="imageContainers">
-      <button class="buttonImages">
-        <img src="./img/Wizarding-World-of-Harry-Potter-768x432.jpg" alt= " Curiositys">
-        <strong><p class="imagesP">Curiosidades</p></strong>
-      </button>
+        <a href="Curiositys.html">
+          <button class="buttonImages">
+            <img src="./img/Wizarding-World-of-Harry-Potter-768x432.jpg" alt=" Curiositys">
+            <strong>
+              <p class="imagesP">Curiosidades</p>
+            </strong>
+          </button>
+        </a>
       </div>
+    </div>
+
 
   </div>
 
-  
+
   <div id="root"></div>
   <script src="main.js" type="module"></script>
 </body>
