Mostramos la Dta de characters con un boton

--- a/src/Potions.html
+++ b/src/Potions.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
-  
-<body>
-    <h1>No hay nada, les dije</h1>
-    <h2>Eso era todo:)</h2>
-</body>
-  
+
+<head>
+    <meta charset="utf-8">
+    <title>Hechizos</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
+</head>
+<header>
+
+    <body>
+        <h1>No hay nada, les dije</h1>
+        <h2>Eso era todo:)</h2>
+
+        <script src="main.js" type="module"></script>
+    </body>
+</header>
+
 </html>
