--- a/src/Spells.html
+++ b/src/Spells.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
 <html>
-  
-<body>
-    <h1>No hay nada, eso es todo tantan!</h1>
-    <h2>Fin</h2>
-</body>
-  
+
+<head>
+    <meta charset="utf-8">
+    <title>Hechizos</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Julius+Sans+One|Oswald" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
+</head>
+<header>
+
+    <body>
+        <h1 id="spellsTitle">Hechizos</h1>
+        <h2 id="spellsSubTitle">¿Que hechizo quieres buscar?</h2>
+
+       
+
+<div id="spellsDiv"></div>
+
+<div class="indexButtonDiv">
+    <a href="index.html">
+        <button class="indexButton">
+           <img src="\img\pergamine.png" alt="backToIndex">
+        </button>
+      </a>
+</div>
+
+    </body>
+</header>
+
+<footer class="spellsFooter">
+    
+ 
+</footer>
+
+<script src="spells.js" type="module"></script>
+
 </html>
