--- a/src/characters.html
+++ b/src/characters.html
@@ -1,61 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-<meta charset="utf-8">
-<title>Personajes</title>
-<link rel="stylesheet" href="style.css" />
-<link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
-    </head>
-    <header id="charactersTitle">
-        <h1>Elija una casa</h1>
-<body>
-<div class="fourHouses">
-    <button class="buttonImages">
-        <img src="./img/gryffindor.png" alt= "Gryffindor">        
+
+<head>
+  <meta charset="utf-8">
+  <title>Personajes</title>
+  <link rel="stylesheet" href="style.css" />
+  
+  <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
+</head>
+<header id="charactersTitle">
+  <h1>Elija una casa</h1>
+
+  <body>
+    <div class="fourHouses">
+      <button id="gryffindor" class="buttonImages">
+        <img id="houses" src="./img/gryffindor.png" alt="Gryffindor">
       </button>
 
       <button class="buttonImages">
-        <img src=".\img\slythering.png" alt= "Slythering">        
+        <img id="slythering" src=".\img\slythering.png" alt="Slythering">
       </button>
 
       <button class="buttonImages">
-        <img src=".\img\hafelpuf.png" alt= "Hafelpuf">        
+        <img id="hafelpuf" src=".\img\hafelpuf.png" alt="Hafelpuf">
       </button>
-      
+
       <button class="buttonImages">
-        <img src=".\img\revenclaw.png" alt= "Ravenclaw">        
+        <img id="revenclaw" src=".\img\revenclaw.png" alt="Ravenclaw">
       </button>
-    
+
+      <button class="buttonImages">
+        <img id="muggle" src=".\img\logo muggle.png" alt="Muggle">
+      </button>
+
     </div>
 
+    <div id="charactersTable">   
+   </div>
 
+    <br></br>
 
-
+    <div class="indexButtonDiv">
+      <a href="index.html">
+          <button class="indexButton">
+             <img src="\img\pergamine.png" alt="backToIndex">
+          </button>
+        </a>
 
     <script src="main.js" type="module"></script>
-</body>
+  </body>
 
-    </header>
+</header>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<footer class="footer"></footer>
 
 </html>
