--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <link href="http://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
   <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
   <link href="http://fonts.cdnfonts.com/css/overdose" rel="stylesheet">
+  <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
+  <link href="http://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
 </head>
