Agregamos algunos gif a la Data y pusimos las curiosidades

--- a/src/Curiositys.html
+++ b/src/Curiositys.html
@@ -3,17 +3,33 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hechizos</title>
+    <title>Curiosidades</title>
     <link rel="stylesheet" href="style.css" />
     <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/ifc-rail-road" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
 </head>
 <header>
 
     <body>
-        <h1>Sigue no habiendo nada ;)!</h1>
-        <h2>The end</h2>
+        <h1 class="allTitles">Curiosidades</h1>
+        <h2 class="subTitleAll">¿Sabias que...?</h2>
 
-        <script src="main.js" type="module"></script>
+<div id="curiosityDiv"></div>
+
+
+        <div class="indexButtonDiv">
+            <a href="index.html">
+                <div class="contenedor">
+                    <img src=".\img\pergamine.png" />  
+                    <div class="centrado">Volver al inicio</div>
+                  </div>
+                </button>
+              </a>
+        </div>
+        <script src="curiositys.js" type="module"></script>
     </body>
 </header>
 
