--- a/src/Potions.html
+++ b/src/Potions.html
@@ -3,18 +3,33 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hechizos</title>
+    <title>Pociones</title>
     <link rel="stylesheet" href="style.css" />
     <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
+   
 </head>
 <header>
 
     <body>
-        <h1>No hay nada, les dije</h1>
-        <h2>Eso era todo:)</h2>
+        <h1 class="allTitles">Pociones</h1>
+        <h2 class="subTitleAll">¿Que poción buscas?</h2>
 
-        <script src="main.js" type="module"></script>
+        <div id="potionsDiv"></div>
+
+        <div class="indexButtonDiv">
+            <a href="index.html">
+                <div class="contenedor">
+                    <img src=".\img\pergamine.png" />  
+                    <div class="centrado">Volver al inicio</div>
+                  </div>
+                </button>
+              </a>
+        </div>
+        
     </body>
 </header>
-
+<script src="potions.js" type="module"></script>
 </html>
