--- a/src/characters.html
+++ b/src/characters.html
@@ -5,11 +5,13 @@
   <meta charset="utf-8">
   <title>Personajes</title>
   <link rel="stylesheet" href="style.css" />
-  
+  <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
+  <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">  
   <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
 </head>
-<header id="charactersTitle">
+<header class="allTitles">
   <h1>Elija una casa</h1>
+</header>
 
   <body>
     <div class="fourHouses">
@@ -42,16 +44,17 @@
 
     <div class="indexButtonDiv">
       <a href="index.html">
-          <button class="indexButton">
-             <img src="\img\pergamine.png" alt="backToIndex">
+          <div class="contenedor">
+              <img src=".\img\pergamine.png" />  
+              <div class="centrado">Volver al inicio</div>
+            </div>
           </button>
         </a>
-
-    <script src="main.js" type="module"></script>
+  </div>
   </body>
 
-</header>
 
+<script src="main.js" type="module"></script>
 <footer class="footer"></footer>
 
 </html>
