--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link href="http://fonts.cdnfonts.com/css/overdose" rel="stylesheet">
   <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
   <link href="http://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
+  <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -73,7 +74,7 @@
 
 
   <div id="root"></div>
-  <script src="main.js" type="module"></script>
+  <script src="music.js" type="module"></script>
 </body>
 
 </html>
