Agregamos parte del Readme al proyecto final

--- a/src/Curiositys.html
+++ b/src/Curiositys.html
@@ -10,6 +10,7 @@
     <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/bv-rondes" rel="stylesheet">
 </head>
 <header>
 
@@ -29,6 +30,16 @@
                 </button>
               </a>
         </div>
+        <footer class="footerGit"> Esta pagina fue creada con ❤  por :<br>
+            <a href="https://github.com/Theriomich">
+            <img src=".\img\git hub.webp" alt="github">
+            Michelle
+          </a>
+          <a href="https://github.com/Catapasz">
+            <img src=".\img\git hub.webp" alt="github">
+            Catalina
+          </a>
+        </footer>
         <script src="curiositys.js" type="module"></script>
     </body>
 </header>
