--- a/src/Potions.html
+++ b/src/Potions.html
@@ -9,6 +9,7 @@
     <link href="http://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/bv-rondes" rel="stylesheet">
    
 </head>
 <header>
@@ -27,8 +28,18 @@
                   </div>
                 </button>
               </a>
-        </div>
-        
+            </div>
+        <footer class="footerGit"> Esta pagina fue creada con ❤  por :<br>
+            <a href="https://github.com/Theriomich">
+            <img src=".\img\git hub.webp" alt="github">
+            Michelle
+          </a>
+          <a href="https://github.com/Catapasz">
+            <img src=".\img\git hub.webp" alt="github">
+            Catalina
+          </a>
+          </footer>
+       
     </body>
 </header>
 <script src="potions.js" type="module"></script>
