--- a/src/Spells.html
+++ b/src/Spells.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Julius+Sans+One|Oswald" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/bv-rondes" rel="stylesheet">
 </head>
 <header>
 
@@ -33,11 +34,17 @@
 
    
 </header>
+<footer class="footerGit"> Esta pagina fue creada con ❤  por :<br>
+    <a href="https://github.com/Theriomich">
+    <img src=".\img\git hub.webp" alt="github">
+    Michelle
+  </a>
+  <a href="https://github.com/Catapasz">
+    <img src=".\img\git hub.webp" alt="github">
+    Catalina
+  </a>
+  </footer>
 
-<footer class="spellsFooter">
-    
- 
-</footer>
 
 <script src="spells.js" type="module"></script>
 <script src="music.js" type="module"></script>
