--- a/src/characters.html
+++ b/src/characters.html
@@ -8,6 +8,7 @@
   <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
   <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">  
   <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
+  <link href="http://fonts.cdnfonts.com/css/bv-rondes" rel="stylesheet">
 </head>
 <header class="allTitles">
   <h1>Elija una casa</h1>
@@ -40,7 +41,7 @@
     <div id="charactersTable">   
    </div>
 
-    <br></br>
+   
 
     <div class="indexButtonDiv">
       <a href="index.html">
@@ -50,11 +51,23 @@
             </div>
           </button>
         </a>
-  </div>
+      </div>
+      
+  <footer class="footerGit"> Esta pagina fue creada con ❤  por :<br>
+    <a href="https://github.com/Theriomich">
+    <img src=".\img\git hub.webp" alt="github">
+    Michelle
+  </a>
+  <a href="https://github.com/Catapasz">
+    <img src=".\img\git hub.webp" alt="github">
+    Catalina
+  </a>
+  </footer>
+
   </body>
 
 
 <script src="main.js" type="module"></script>
-<footer class="footer"></footer>
+
 
 </html>
