--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
   <link href="http://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
   <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
+  <link href="http://fonts.cdnfonts.com/css/bv-rondes" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -49,13 +50,13 @@
       </div>
       <div class="imageContainers">
         <a href="Potions.html">
-        <button class="buttonImages">          
+          <button class="buttonImages">
             <img src="./img/pociones.jpg" alt="Potions">
             <strong>
               <p class="imagesP">Pociones</p>
             </strong>
-        </button>
-           </a>
+          </button>
+        </a>
       </div>
       <div class="imageContainers">
         <a href="Curiositys.html">
@@ -72,7 +73,16 @@
 
   </div>
 
-
+  <footer class="footerGit"> Esta pagina fue creada con ❤  por :<br>
+    <a href="https://github.com/Theriomich">
+    <img src=".\img\git hub.webp" alt="github">
+    Michelle
+  </a>
+  <a href="https://github.com/Catapasz">
+    <img src=".\img\git hub.webp" alt="github">
+    Catalina
+  </a>
+  </footer>
   <div id="root"></div>
   <script src="music.js" type="module"></script>
 </body>
