--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <header id="title">
-  <h1><strong>Bienvenidos al mágico mundo de Harry Potter</strong></h1>
+  <h1><strong>Bienvenidos al magico mundo de Harry Potter</strong></h1>
 </header>
 
 <body>
