--- a/src/Spells.html
+++ b/src/Spells.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <title id="spells_title">Hechizos</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Julius+Sans+One|Oswald" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/bv-rondes" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/bv-rondes" rel="stylesheet">
 </head>
 <header>
   <h1 class="allTitles">Hechizos</h1>
