--- a/src/characters.html
+++ b/src/characters.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <title>Personajes</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/bv-rondes" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/bv-rondes" rel="stylesheet">
 </head>
 <header class="allTitles">
   <h1>Elija una casa</h1>
