--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Harry Potter Fanpage</title>
-  <link href="http://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/overdose" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/bv-rondes" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/spqr" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/overdose" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/auldmagick" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/nightmare-pills" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/goudy-mediaeval" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/bv-rondes" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -73,15 +73,15 @@
 
   </div>
 
-  <footer class="footerGit"> Esta pagina fue creada con ❤  por :<br>
+  <footer class="footerGit"> Esta pagina fue creada con ❤ por :<br>
     <a href="https://github.com/Theriomich">
-    <img src=".\img\git hub.webp" alt="github">
-    Michelle
-  </a>
-  <a href="https://github.com/Catapasz">
-    <img src=".\img\git hub.webp" alt="github">
-    Catalina
-  </a>
+      <img src=".\img\git hub.webp" alt="github">
+      Michelle
+    </a>
+    <a href="https://github.com/Catapasz">
+      <img src=".\img\git hub.webp" alt="github">
+      Catalina
+    </a>
   </footer>
   <div id="root"></div>
   <script src="music.js" type="module"></script>
